--- a/src/app/pages/pending-applications/pending-applications.component.html
+++ b/src/app/pages/pending-applications/pending-applications.component.html
@@ -42,19 +42,20 @@
                               </div>
                             </div>
                             <div class="row">
-                              <div class="col-md-2 pt-2">
+                              <div class="col-md-1 pt-2">
+                                <p-button label="search" (click)="searchNewApplication(id.value,name.value,email.value)" styleClass="p-button-success"></p-button>
+                             </div>
+                             <div class="col-md-1 pt-2" >
+                               <button pButton label="Clear" (click)="clear('new')" style="color: #15d015" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
+                           </div>
+                              <div class="col-md-4 pt-2" style="width:32%">
+                                <div class="card flex flex-wrap justify-content-center">
                                 <span class="p-input-icon-left">
                                   <i class="pi pi-search" style="color: #15d015"></i> 
-                                  <input pInputText type="text" [(ngModel)]="filterText" (input)="filterData()" placeholder="Search Keywords" #globalSearch/> 
+                                  <input class="p-inputtext-sm" pInputText type="text" [(ngModel)]="filterText" (input)="filterData()" placeholder="Search Keywords" #globalSearch style="width:100%"> 
                                 </span>
+                                </div>
                               </div>
-                              <div class="col-md-8 pt-2">
-                                 <p-button label="search" (click)="searchNewApplication(id.value,name.value,email.value)" styleClass="p-button-success"></p-button>
-                              </div>
-                              <div class="col-md-2 pt-2" >
-                                <button pButton label="Clear" (click)="clear('new')" style="color: #15d015" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
-                            </div>
-                           
                             </div> 
                             <p>Total Student Count : {{this.totalCount}}</p>
                           </ng-template> 
@@ -106,7 +107,7 @@
                                 </td>
                                 <td>
                                     <i class="pi pi-times-circle" pTooltip="Reject" tooltipPosition="top"
-                                    (click)="rejectApplication(newpendingData.user_id,newpendingData.id)"></i>
+                                    (click)="rejectApplication(newpendingData.user_id,newpendingData.id,'pending')"></i>
                                 </td>
                             </tr>
                         </ng-template>
@@ -156,19 +157,20 @@
                                   </div>
                                 </div>
                                 <div class="row">
-                                  <div class="col-md-2 pt-2">
+                                  <div class="col-md-1 pt-2">
+                                    <p-button label="search" (click)="searchRequestedApplication(idR.value,nameR.value,emailR.value)" styleClass="p-button-warning"></p-button>
+                                 </div>
+                                 <div class="col-md-1 pt-2" >
+                                   <button pButton label="Clear" (click)="clear('requested')" style="color:rgb(243, 191, 24)" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
+                               </div>
+                                  <div class="col-md-4 pt-2" style="width:32%">
+                                   <div class="card flex flex-wrap justify-content-center">
                                     <span class="p-input-icon-left">
                                       <i class="pi pi-search" style="color: rgb(243, 191, 24)"></i> 
-                                      <input pInputText type="text" [(ngModel)]="filterText" (input)="filterDataRequested()" placeholder="Search Keywords" #globalSearchR/> 
+                                      <input class="p-inputtext-sm" pInputText type="text" [(ngModel)]="filterText" (input)="filterDataRequested()" placeholder="Search Keywords" #globalSearchR style="width:100%"/> 
                                     </span>
-                                  </div>
-                                  <div class="col-md-8 pt-2">
-                                     <p-button label="search" (click)="searchRequestedApplication(idR.value,nameR.value,emailR.value)" styleClass="p-button-warning"></p-button>
-                                  </div>
-                                  <div class="col-md-2 pt-2" >
-                                    <button pButton label="Clear" (click)="clear('requested')" style="color:rgb(243, 191, 24)" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
-                                </div>
-                               
+                                    </div>
+                                  </div> 
                                 </div> 
                                 <p>Total Student Count : {{this.totalCount}}</p>
                               </ng-template> 
@@ -220,7 +222,7 @@
                                   </td>
                                   <td>
                                       <i class="pi pi-times-circle" pTooltip="Reject" tooltipPosition="top"
-                                      (click)="rejectApplication(requestedData.user_id,requestedData.id)"></i>
+                                      (click)="rejectApplication(requestedData.user_id,requestedData.id,'pending')"></i>
                                   </td>
                                 </tr>
                             </ng-template>
@@ -239,44 +241,57 @@
                     <p-table
                         #dt3
                         dataKey="id"
-                        [rows]="10"
-                        [showCurrentPageReport]="true"
-                        [rowsPerPageOptions]="[10, 25, 50]"
+                        [rows]="10" 
                         [value]="changedApplication" 
-                        [paginator]="true"
-                        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-                        [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']"
+                        [paginator]="true"  
                         [tableStyle]="{ 'min-width': '75rem' }"
                         >
-                        <ng-template pTemplate="caption">
-                            <div class="flex-container">
-                              <div class="flex-item">
-                                <span class="p-input-icon-left">
-                                  <i class="pi pi-search"  style="color: #0b5bf1"></i>
-                                  <input pInputText type="text" placeholder="Search App ID" />
-                                </span>
-                              </div>
-                              <div class="flex-item">
-                                <span class="p-input-icon-left">
-                                  <i class="pi pi-search"  style="color: #0b5bf1"></i>
-                                  <input pInputText type="text" placeholder="Search Email ID" />
-                                </span>
-                              </div>
-                              <div class="ml-auto" >
-                                <span class="p-input-icon-left">
-                                  <i class="pi pi-search" style="color: #0b5bf1"></i>
-                                  <input pInputText type="text" placeholder="Search Keywords" />
-                                </span>
-                              </div>
-                              <div class="flex-item ml-auto">
-                                <p-button label="Download Excel"  [loading]="loading" (click)="load()"></p-button>
-                              </div>
+                        <ng-template pTemplate="caption"> 
+                          <div class="row">
+                            <div class="col-md-2">
+                              <span class="p-input-icon-left">
+                                <i class="pi pi-search"></i>
+                                <input pInputText type="text"    placeholder="Search App ID" #idR />
+                              </span>
                             </div>
-                            <div class="flex">
-                                <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
+                            <div class="col-md-2">
+                              <span class="p-input-icon-left">
+                                <i class="pi pi-search"></i>
+                                <input pInputText type="text"   placeholder="Search Name" #nameR />
+                              </span>
                             </div>
-                            <p>Total Student Count : {{this.totalCount}}</p>
-                          </ng-template>
+                            <div class="col-md-2" >
+                              <span class="p-input-icon-left">
+                                <i class="pi pi-search" ></i>
+                                <input pInputText type="text"    placeholder="Search Email ID" #emailR />
+                              </span>
+                            </div>
+                            <div class="col-md-2"></div>
+                            <div class="col-md-2"  >
+                              <p-calendar   selectionMode="range" placeholder="Date Picker" [readonlyInput]="true" [showIcon]="true"  ></p-calendar>
+                          </div>
+                            <div class="col-md-2">
+                              <p-button label="Download Excel"     [loading]="loading"   #datePicker></p-button>
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-1 pt-2">
+                              <p-button label="search" (click)="searchRequestedApplication(idR.value,nameR.value,emailR.value)"  ></p-button>
+                           </div>
+                           <div class="col-md-1 pt-2" >
+                             <button pButton label="Clear" (click)="clear('requested')"  class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
+                         </div>
+                            <div class="col-md-4 pt-2" style="width:32%">
+                             <div class="card flex flex-wrap justify-content-center">
+                              <span class="p-input-icon-left">
+                                <i class="pi pi-search"></i> 
+                                <input class="p-inputtext-sm" pInputText type="text" [(ngModel)]="filterText" (input)="filterDataRequested()" placeholder="Search Keywords" #globalSearchR style="width:100%"/> 
+                              </span>
+                              </div>
+                            </div> 
+                          </div> 
+                          <p>Total Student Count : {{this.totalCount}}</p>
+                        </ng-template> 
                            
                         <ng-template pTemplate="header">
                             <tr>
@@ -292,42 +307,6 @@
                                 <th style="width:5%">Errata</th>
                                 <th style="width:5%">Verify</th>
                                 <th style="width:5%">Action</th> 
-                            </tr>
-                            <tr>
-                                <!-- <th>
-                                    <p-columnFilter type="text" field="name"></p-columnFilter>
-                                </th>
-                                <th>
-                                    <p-columnFilter type="text" field="country.name"></p-columnFilter>
-                                </th> -->
-                                <!-- <th> -->
-                                    <!-- <p-columnFilter field="representative" matchMode="in" [showMenu]="false">
-                                        <ng-template pTemplate="filter" let-value let-filter="filterCallback">
-                                            <p-multiSelect [ngModel]="value" placeholder="Any"  optionLabel="name">
-                                                <ng-template let-option pTemplate="item">
-                                                    <div class="inline-block vertical-align-middle">
-                                                        <img [alt]="option.label" src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{ option.image }}" width="24" class="vertical-align-middle" />
-                                                        <span class="ml-1 mt-1">{{ option.name }}</span>
-                                                    </div>
-                                                </ng-template>
-                                            </p-multiSelect>
-                                        </ng-template>
-                                    </p-columnFilter> -->
-                                <!-- </th> -->
-                                <!-- <th>
-                                    <p-columnFilter field="status" matchMode="equals" [showMenu]="false">
-                                        <ng-template pTemplate="filter" let-value let-filter="filterCallback">
-                                            <p-dropdown [ngModel]="value"   placeholder="Any" [showClear]="true">
-                                                <ng-template let-option pTemplate="item">
-                                                    <p-tag [value]="option.value" [severity]="getSeverity(option.label)"></p-tag>
-                                                </ng-template>
-                                            </p-dropdown>
-                                        </ng-template>
-                                    </p-columnFilter>
-                                </th> -->
-                                <!-- <th>
-                                    <p-columnFilter type="boolean" field="verified"></p-columnFilter>
-                                </th> -->
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-changedData>
@@ -346,12 +325,23 @@
                                  </td>
                                 <td>  </td>
                                 <td> {{changedData.type}} </td>
-                                <td> {{changedData.created_at}} </td>
-                                <td></td>
-                                <td>  </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>   
+                                <td> {{changedData.application_date}} </td>
+                                <td>{{changedData.college}}</td>
+                                <td>
+                                  <i class="pi pi-refresh" pTooltip="Refresh" tooltipPosition="top" ></i>
+                              </td>
+                              <td>
+                                  <i class="pi pi-eye" pTooltip="View Errata" tooltipPosition="top"
+                                  (click)="viewErrata(changedData.user_id,changedData.id)"></i>
+                              </td>
+                              <td> 
+                                  <i class="pi pi-verified" pTooltip="Verified" tooltipPosition="top"
+                                  (click)="verifyApplication(changedData.user_id,changedData.id)"></i> 
+                              </td>
+                              <td>
+                                  <i class="pi pi-times-circle" pTooltip="Reject" tooltipPosition="top"
+                                  (click)="rejectApplication(changedData.user_id,changedData.id,'pending')"></i>
+                              </td>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="emptymessage">
