--- a/src/app/pages/signed-applications/signed-applications.component.html
+++ b/src/app/pages/signed-applications/signed-applications.component.html
@@ -101,7 +101,7 @@
                                     <p-button icon="pi pi-times"
                                         styleClass="p-button-rounded p-button-danger p-button-outlined" (click)="rejectApplication(signed.user_id,signed.id,signed.name)"></p-button>
                                     <p-button icon="pi pi-refresh"
-                                        styleClass="p-button-rounded p-button p-button-outlined" (click)="resendApplication(signed.user_id,signed.id,signed.name)"></p-button>
+                                        styleClass="p-button-rounded p-button p-button-outlined" (click)="resendApplication(signed.user_id,signed.id,'verified')"></p-button>
                                 </div>
                             </div>
                         </div>
