--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -1,42 +1,49 @@
-<div  >
+<div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="https://mu.etranscript.in/api/images/admissionDeskLogo.png" class="headerimages"/>
+                <img src="https://mu.etranscript.in/api/images/admissionDeskLogo.png" class="headerimages" />
             </a>
             <a class="navbar-brand" href="#">
-                <img id="text" src="https://mu.etranscript.in/api/images/F.png" class="headerimages2"/> 
+                <img id="text" src="https://mu.etranscript.in/api/images/F.png" class="headerimages2" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown"> 
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link">
-                            <img src="https://img.icons8.com/ios-glyphs/30/null/filled-appointment-reminders.png"/>
+                            <img src="https://img.icons8.com/ios-glyphs/30/null/filled-appointment-reminders.png" />
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" (click)="helpBtn()">
-                            <img src="https://img.icons8.com/ios-glyphs/30/null/filled-message.png"/>
+                            <img src="https://img.icons8.com/ios-glyphs/30/null/filled-message.png" />
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"  role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            {{user_name}}
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item">Action</a></li>
-                            <li><a class="dropdown-item">Another action</a></li>
-                            <li><a class="dropdown-item">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li  class="nav-item">
-                        <a class="nav-link">
-                            <img src="https://img.icons8.com/ios-glyphs/30/null/favorite-cart.png"/>
+                    <!-- <p-avatar  image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"></p-avatar> -->
+
+                    <!-- <p-menubar [model]="items"></p-menubar> -->
+                    <button mat-button class="user-button" [matMenuTriggerFor]="menu">{{this.user_name}}</button>
+                    <mat-menu #menu="matMenu" class="user-menu">
+                        <button mat-menu-item (click)="viewProfile()">
+                            <mat-icon>account_circle</mat-icon>
+                           <span>Profile</span> 
+                        </button>
+                        <button mat-menu-item (click)="changePassword()">
+                            <mat-icon>lock_reset</mat-icon>
+                            <span> Change Password</span>
+                        </button>
+                        <button mat-menu-item (click)="logOut()">
+                            <mat-icon>logout</mat-icon>
+                            <span>Log Out</span>
+                        </button>
+                    </mat-menu>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="viewCart()">
+                            <img src="https://img.icons8.com/ios-glyphs/30/null/favorite-cart.png" />
                         </a>
                     </li>
                 </ul>
