--- a/src/app/pages/total-applications/total-applications.component.html
+++ b/src/app/pages/total-applications/total-applications.component.html
@@ -39,19 +39,20 @@
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-md-2 pt-2">
+                      <div class="col-md-1 pt-2">
+                        <p-button label="search" (click)="search(id.value,name.value,email.value)" styleClass="p-button-success"></p-button>
+                     </div>
+                     <div class="col-md-1 pt-2" >
+                       <button pButton label="Clear" (click)="clear()" style="color: #15d015" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
+                   </div>
+                      <div class="col-md-4 pt-2" style="width:32%">
+                    <div class="card flex flex-wrap justify-content-center">
                         <span class="p-input-icon-left">
                           <i class="pi pi-search" style="color: #15d015"></i> 
-                          <input pInputText type="text" [(ngModel)]="filterText" (input)="filterData()" placeholder="Search Keywords" #globalSearch/> 
+                          <input class="p-inputtext-sm" pInputText type="text" [(ngModel)]="filterText" (input)="filterData()" placeholder="Search Keywords" #globalSearch style="width: 100%;"/> 
                         </span>
-                      </div>
-                      <div class="col-md-8 pt-2">
-                         <p-button label="search" (click)="search(id.value,name.value,email.value)" styleClass="p-button-success"></p-button>
-                      </div>
-                      <div class="col-md-2 pt-2" >
-                        <button pButton label="Clear" (click)="clear()" style="color: #15d015" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
-                    </div>
-                   
+                        </div>
+                      </div> 
                     </div> 
                     <p>Total Student Count : {{this.totalCount}}</p>
                   </ng-template> 
